[package]
name = "wallet-balance-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base58 = "0.2"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lib]
name = "wallet_balance"
path = "src/lib.rs"

[[bin]]
name = "wallet-balance"
path = "src/main.rs"
